Implement complete label propagation for SEFF and UserAction Elements